css fixed & add AlarmPopup & CalibrationPopup z-index fixed

--- a/APPLICATION/src/style/components/CalibrationPopup.scss
+++ b/APPLICATION/src/style/components/CalibrationPopup.scss
@@ -11,7 +11,7 @@ div.calibrationZoneContainer {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 10;
+  z-index: 99;
 
   div.calibrationBox {
     max-width: 528px;
