--- a/APPLICATION/src/style/pages/ObservePage.scss
+++ b/APPLICATION/src/style/pages/ObservePage.scss
@@ -248,8 +248,8 @@ div.observeContainer {
           justify-content: end;
           button{
             all: unset;
-            width: 24px;
-            height: 24px;
+            width: 36px;
+            height: 36px;
             cursor: pointer;
             vertical-align: middle;
             color: $white;
@@ -262,15 +262,13 @@ div.observeContainer {
               transition: 0.3s;
               position: absolute;
               border-radius: 50%;
-              opacity: 0;
             }
             &:hover{
               &::after{
                 position: absolute;
                 width: 36px;
                 height: 36px;
-                background-color: $white;
-                opacity: 0.12;
+                background-color: rgba(255,255,255, 0.3);
               }
             }
           }
